# UniWorld-V1

./: .gitignore  README.md  check_embed.py  cli.py  command.sh  extract_features.py  get_cond_info.py  inference.py  inference_did.py  it2i.txt  it2i_.txt  models.py  pyproject.toml  requirements.txt  run.sh  sd3.py  train.py  train.sh  train_disc.py  train_feature.sh  train_flowvae.py  train_redux.py  train_redux_ema.py  train_tad.py  train_v1.py  train_v1_1.py  utils.py
configs/: 100kx1024_lrx2.yaml  100kx1024_lrx2_ln.yaml  100kx1024_lrx2_qknorm.yaml  100kx1024_lrx2_qknorm_ln.yaml  100kx1024_lrx2_res512.yaml  100kx1024_lrx4.yaml  100kx1024_lrx4_uni.yaml  100kx1024_lrx4_uni_ln.yaml  baseline.yaml  debug.yaml  did_b_1000kx1024_qf1x1_img1p0.yaml  did_b_1000kx1024_qf1x2_img1p0.yaml  did_b_1000kx1024_qf1x4_img1p0.yaml  did_s_1000kx1024_qf1x1_img0p0.yaml  did_s_1000kx1024_qf1x1_img0p0_fp32.yaml  did_s_1000kx1024_qf1x1_img1p0.yaml  did_s_1000kx1024_qf1x1_img1p0_fp32.yaml  did_s_100kx1024_qf1x1_img0p0.yaml  did_s_100kx1024_qf1x1_img0p0_uncond.yaml  did_s_100kx1024_qf1x1_img0p0_uncond_zeroqf.yaml  did_s_100kx1024_qf1x1_img0p5.yaml  did_s_100kx1024_qf1x1_img1p0.yaml  did_s_100kx1024_qf2x2_img1p0.yaml  did_s_100kx1024_qf4x4_img1p0.yaml  diff_128_s_p1_100kx1024.yaml  diff_400kx256.yaml  diff_b_1000kx1024_fp32.yaml  diff_b_1000kx1024_fp32_2node.yaml  diff_b_1000kx1024_qknorm.yaml  diff_b_400kx256.yaml  diff_b_400kx256_cls0p01_dec2at4.yaml  diff_b_400kx256_cls0p01end100k_dec2at4.yaml  diff_l_1000kx1024_fp32.yaml  diff_l_1000kx1024_fp32_4node.yaml  diff_l_400kx256.yaml  (+81 more)
(+298 files in other folders)
