[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "models"
version = "1.0"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
]
dependencies = [
    "transformers==4.46.3", "accelerate==0.34.0", "tokenizers==0.20.3", "diffusers==0.30.2", 
    "einops==0.7.0", "matplotlib==3.7.5", "numpy==1.24.4", "ipdb==0.13.13", 
    "omegaconf==2.1.1", "pandas==2.0.3", "pillow==10.2.0", "torchdiffeq==0.2.3", 
    "PyYAML==6.0.2", "timm==0.9.16", "wandb==0.16.3", "tensorboard==2.14.0", 
    "torch==2.6.0", "torchvision==0.21.0", "deepspeed==0.15.1", "protobuf==3.20.0", 
    "lightning-utilities==0.12.0", "torchmetrics==1.6", 
]

[project.urls]
"Homepage" = "https://github.com/PKU-YuanGroup/Open-Sora-Plan"
"Bug Tracker" = "https://github.com/PKU-YuanGroup/Open-Sora-Plan/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "docker*", "docs", "scripts*"]

[tool.wheel]
exclude = ["assets*", "docker*", "docs", "scripts*"]

[tool.mypy]
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_calls = true
check_untyped_defs = true
no_implicit_optional = true